ADD order areas

--- a/docs/de-de/modules/auftraege/pages/design-order-view.adoc
+++ b/docs/de-de/modules/auftraege/pages/design-order-view.adoc
@@ -443,4 +443,7 @@ In der Auftragsübersicht werden die Auftragspositionen standardmäßig nicht an
 
 
 // weitere Themen zur MyView hier einfügen?
+[#editing-mode]
+Wie funktioniert der Bearbeitungsmodus? Raster erstellen etc. - evtl. von Artikelseite übernehmen
+
 // Link zur nächsten Seite hier einfügen
