--- a/docs/de-de/modules/auftraege/pages/working-with-orders.adoc
+++ b/docs/de-de/modules/auftraege/pages/working-with-orders.adoc
@@ -91,9 +91,836 @@ Rechts in der Auftragsübersicht sind je nach Auftragstyp weitere Funktionen üb
 
 |===
 
+[#order-areas]
+== Erläuterungen zu den einzelnen Bereichen
 
-//Alle Bereiche hier aufführen
+Alle in einem Auftrag verfügbaren Bereiche und deren Funktionen werden in den folgenden Unterkapiteln erläutert. Verwende den xref:design-order-view:editing-mode.adoc[Bearbeitungsmodus] und entscheide selbst, welche Felder dir in welchem Bereich angezeigt werden sollen. So kannst du deine Ansicht individuell gestalten und auf deine Bedürfnisse anpassen. Beachte, dass die verfügbaren Felder je nach Auftragstyp variieren können. +
+Mit einem Klick auf einen Eintrag in der folgenden Liste gelangst du direkt in das jeweilige Unterkapitel, in dem du weitere Informationen findest.
 
+* <<#overview, Übersicht>>
+* <<#status-and-tags, Status und Tags>>
+* <<#general, Allgemein>>
+* <<#addresses, Adressen>>
+* <<#order-items, Auftragspositionen>>
+* <<#payment-terms, Zahlungsbedingungen>>
+* <<#bank-data, Bankdaten>>
+* <<#assigned-payments, Zugeordnete Zahlungen>>
+* <<#order-references, Auftragsreferenzen>>
+* <<#properties, Eigenschaften>>
+* <<#documents, Dokumente>>
+* <<#history, Historie>>
+* <<#notes, Notizen>>
+
+[TIP]
+.Wie werden die Daten in den einzelnen Bereichen geladen?
+====
+Wenn du in einem Auftrag auf der linken Seite in der Navigation auf den jeweiligen Bereich klickst, den du bearbeiten möchtest, leuchtet dieser Bereich kurz in blau auf, die vorhandenen Daten für diesen Bereich werden geladen und du kannst direkt mit der Bearbeitung beginnen. +
+*_Hinweis:_* Die folgenden Bereiche werden bereits beim Öffnen des Auftrags initial geladen und geöffnet: *Übersicht*, *Status und Tags*, *Adressen*, *Allgemein*, *Auftragspositionen*, *Zahlungsbedingungen*, *Zugeordnete Zahlungen*, *Dokumente*, *Historie*. +
+Die folgenden Bereiche werden erst nach einem Klick in der Navigation auf der linken Seite geladen und geöffnet: *Bankdaten*, *Auftragsreferenzen*, *Eigenschaften*.
+====
+
+[IMPORTANT]
+.Backend-Benutzer:innen: Fehlende Rechte für bestimmte Bereiche, Schaltflächen und Funktionen im Auftrag?
+====
+Wenn eine Person mit *Backend*-Zugriffsrechten bestimmte Bereiche und/oder darin enthaltene Schaltflächen und Funktionen in einem Auftrag nicht sehen kann, muss eine Person mit *Admin*-Zugriffsrechten weitere Rechte im Benutzer:innenkonto im Menü *Einrichtung » Einstellungen » Benutzer » Rechte » Benutzer* aktivieren. +
+Alle benötigten Rechte für die einzelnen Bereiche, Schaltflächen und Funktionen in Aufträgen findest du auf der Handbuchseite xref:auftraege:preparatory-settings.adoc#[Vorbereitende Einstellungen vornehmen] im Kapitel xref:auftraege:preparatory-settings.adoc#grant-rights[Rechte für Backend-Benutzer:innen vergeben].
+====
+
+[#area-overview]
+=== Bereich: Übersicht
+
+Im Bereich *Übersicht* siehst du alle grundlegenden Informationen zum Auftrag. <<table-tab-overview#>> listet alle Felder, die im Bereich *Übersicht* des Auftrags verfügbar sind.
+
+[[table-tab-overview]]
+.Einstellungen im Bereich Übersicht
+[cols="1,3"]
+|===
+
+| *Warenwert brutto*
+|Zeigt den Brutto-Warenwert an.
+
+| *Warenwert netto*
+|Zeigt den Netto-Warenwert an.
+
+| *MwSt.*
+|Zeigt die Mehrwertsteuer an.
+
+| *Rechnungsbetrag*
+|Zeigt den Rechnungsbetrag an.
+
+| *Bezahlter Betrag*
+|Zeigt den bezahlten Betrag an.
+
+| *Versandkosten brutto*
+|Zeigt die Brutto-Versandkosten an.
+
+| *Versandkosten netto*
+|Zeigt die Netto-Versandkosten an.
+
+| *Artikelmenge*
+|Zeigt die Anzahl der Artikel an.
+
+| *Warengewicht*
+|Zeigt das Warengewicht an.
+
+| *Gewinnspanne netto*
+|Zeigt die Netto-Gewinnspanne an.
+
+| *Mahnstufe*
+|Zeigt die Mahnstufe an.
+
+| *Gutscheinzahlung*
+|Zeigt die Gutscheinzahlung an.
+
+| *Steuerfreier Betrag*
+|Zeigt den steuerfreien Betrag an.
+
+| *Gutscheinrabatt brutto*
+|Zeigt den Brutto-Gutscheinrabatt an.
+
+| *Gutscheinrabatt netto*
+|Zeigt den Netto-Gutscheinrabatt an.
+
+|===
+
+[#area-status-tags]
+=== Bereich: Status und Tags
+
+Im Bereich *Status und Tags* siehst du den Status des Auftrags sowie die gewählten Tags.
+
+[[table-area-status-tags]]
+.Einstellungen im Bereich Status und Tags
+[cols="1,3"]
+|===
+|Einstellung |Erläuterung
+
+| *Status*
+|Zeigt den Status an, in dem sich der Auftrag befindet. +
+Wähle bei Bedarf einen anderen Auftragsstatus aus der Dropdown-Liste. +
+*_Hinweis:_* Der Auftragsstatus *[7] Warenausgang gebucht* kann nicht in einen niedrigeren Status geändert werden, da die Ware bereits verschickt wurde. Um den Status dennoch zu ändern, muss die Buchung des Warenausgangs vorher zurückgesetzt werden.
+
+| *Tags*
+a|Zeigt die gewählten Tags. +
+Die folgenden Tags stehen in der Dropdown-Liste zur Verfügung: +
+
+* Auftrags-Tag
+* Lieferdatum: gesetzt
+* Status: geliefert
+* Status: offen
+* Zahlung: bezahlt
+
+|===
+
+[#area-general]
+=== Bereich: Allgemein
+
+Im Bereich *Allgemein* siehst du grundlegende Informationen zu deinem Auftrag auf einen Blick. Entscheide über den Bearbeitungsmodus selbst, welche Einstellungen in diesem Bereich angezeigt werden sollen.
+
+[[table-area-general]]
+.Einstellungen im Bereich Allgemein
+[cols="1,3"]
+|===
+|Einstellung |Erläuterung
+
+| *Auftragstyp*
+|Zeigt den Auftragstyp an. Die Standardeinstellung für den Auftragstyp ist *Auftrag*. +
+*_Tipp:_* Ein Auftrag kann mit nur wenigen Klicks in eine Vorbestellung geändert werden und andersherum. Klicke dazu rechts auf material:change_circle[] und bestätige die Abfrage.
+
+| *Sprache*
+|Zeigt die Sprache des Auftrags an. Die Standardeinstellung ist *Deutsch*. +
+Auftragsdokumente sowie E-Mails werden in der Auftragssprache erzeugt. Du kannst die Sprache über die Dropdown-Liste beliebig anpassen. +
+Beachte, dass zur Erzeugung der Dokumente und E-Mails in verschiedenen Sprachen die jeweiligen Vorlagen erstellt sein müssen.
+
+| *Eigner*
+|Wähle einen Eigner aus der Dropdownliste.
+
+| *Benutzerdefiniertes Datum*
+|Wähle ein benutzerdefiniertes Datum. +
+*_Hinweis:_* Es können maximal 5 Daten hinzugefügt werden.
+
+| *Status*
+|Wähle einen Status aus der Dropdownliste.
+
+| *Mandant*
+|Der hinterlegte Mandant wird angezeigt.
+
+| *Standort*
+|Zeigt den im Auftrag hinterlegten Standort an. +
+Die Standardeinstellung ist *Deutschland*.
+
+| *Lager*
+|Zeigt das Lager bzw. das Hauptlager der Auftragsartikel an. +
+*_Hinweis:_* Die Option *Lagerkorrektur* gleicht die Anzeige in den Einstellungen des Auftrags mit dem Lager ab, das an den enthaltenen Auftragspositionen hinterlegt ist. Die Option wird nur angezeigt, wenn du in den Grundeinstellungen im Menü *Einrichtung » Aufträge » Einstellungen* bei *Zuordnung des Lagers* die Option *b) pro Artikelposition kann ein Lager zugeordnet werden* gewählt hast. Änderst du an einer Auftragsposition manuell das Lager und wird das neue Lager nicht automatisch in den Einstellungen des Auftrags übernommen, klicke auf *Lagerkorrektur*, um die Anzeige des Lagers zu aktualisieren.
+
+| *Versandprofil und Porto*
+|Zeigt das Versandprofil und die Portokosten an.
+
+| *Benutzerdefinierte Eigenschaft*
+|Wähle eine benutzerdefinierte Eigenschaft. +
+*_Hinweis:_* Es können maximal 3 Eigenschaften hinzugefügt werden.
+
+| *Herkunft*
+|Zeigt die Herkunft des Auftrags an. Über die Dropdown-Liste kannst du die Herkunft anpassen. +
+Die Standardeinstellung für für die Herkunft ist *0.00 Manuelle Eingabe*.
+
+| *Zahlungsart*
+|Zeigt die Zahlungsart an. Wähle die gewünschte Zahlungsart aus der Dropdown-Liste. Standardmäßig ist die Option *Vorkasse* vorausgewählt.
+
+| *Externe Auftragsnummer*
+|Zeigt die externe Auftragsnummer an.
+
+| *Währung*
+|Zeigt die Währung an. +
+Die Standardeinstellung für die Währung ist *Euro (EUR)*.
+
+| *Eingabedatum*
+|Gib ein Eingabedatum ein oder wähle ein Datum über den Kalender (material:today[]).
+
+| *Zeichen Kunde*
+|Zeigt das Zeichen der Kund:in an.
+
+| *Versanddatum*
+|Gib ein Versanddatum ein oder wähle ein Datum über den Kalender (material:today[]).
+
+| *Rückgabedatum*
+|Gib ein Rückgabedatum ein oder wähle ein Datum über den Kalender (material:today[]).
+
+| *Paketnummern*
+|Gib eine Paketnummer ein. +
+Über *Versand-Center öffnen* (terra:outgoing_items[]) gelangst du direkt ins xref:fulfillment:versand-center-2-0.adoc#[Versand-Center 2.0].
+
+| *Mahnstufe*
+|Zeigt die Mahnstufe an. +
+In der Dropdown-Liste kannst du zwischen *Keine* und *Stufe 1* bis *Stufe 4* wählen.
+
+| *Hauptdokument*
+|Zeigt das Hauptdokument an.
+
+| *Wechselkurs*
+|Zeigt den Wechselkurs der gewählten Währung an.
+// Was wird für den Warenausgang angezeigt?
+| *Warenausgang*
+|Zeigt den Warenausgang an.
+
+| *Währung*
+|Zeigt die Währung an.
+
+|===
+
+[#area-addresses]
+=== Bereich: Adressen
+
+Im Bereich *Adressen* siehst du alle Informationen zur Rechnungs- und Lieferadresse.
+Über das Kontextmenü (material:more_vert[]) kannst du die Einstellungen anpassen.
+
+[[table-area-addresses]]
+.Einstellungen im Bereich Adressen
+[cols="1,3"]
+|===
+|Einstellung |Erläuterung
+//welche ID wird angezeigt?
+| *Rechnung*
+a|Zeigt die Rechnungsadresse sowie die ID an. Die Standardeinstellung enthält die folgenden Informationen: Name, Straße, PLZ und Ort, Land, E-Mail-Adresse sowie die ID. +
+Die folgenden Felder stehen dir zur Verfügung: +
+
+* Adressangaben +
+** Anrede +
+** Firma (Name 1) +
+** Vorname (Name 2) +
+** Nachname (Name 3) +
+** Zusatz (Name 4) +
+** Adresse 1 (Straße) +
+** Adresse 2 (Hausnummer) +
+** Adresse 3 (Adresszusatz) +
+** Adresse 4 (Frei) +
+** Postleitzahl +
+** Ort +
+** Land +
+** Region/Bezirk +
+* Adressoptionen: +
+** E-Mail +
+** Telefon +
+** Typ +
+** Wert
+
+| *Lieferung*
+a|Zeigt die Lieferadresse sowie die ID an. Die Standardeinstellung enthält die folgenden Informationen: Name, Straße, PLZ und Ort, Land, E-Mail-Adresse sowie die ID. +
+Die folgenden Felder stehen dir zur Verfügung: +
+
+* Adressangaben +
+** Anrede +
+** Firma (Name 1) +
+** Vorname (Name 2) +
+** Nachname (Name 3) +
+** Zusatz (Name 4) +
+** Adresse 1 (Straße) +
+** Adresse 2 (Hausnummer) +
+** Adresse 3 (Adresszusatz) +
+** Adresse 4 (Frei) +
+** Postleitzahl +
+** Ort +
+** Land +
+** Region/Bezirk +
+* Adressoptionen: +
+** E-Mail +
+** Telefon +
+** Typ +
+** Wert
+
+|===
+
+[#area-order-properties]
+=== Bereich: Auftragspositionen
+//können Auftragspositionen nicht bearbeitet werden?
+Im Bereich *Auftragspositionen* siehst du detaillierte Informationen zu den Auftragspositionen. Beachte, dass Auftragspositionen nicht bearbeitet werden können.
+
+[[table-order-properties]]
+.Bereich: Auftragspositionen
+[cols="1,3"]
+|===
+|Einstellung |Erläuterung
+
+| *Menge*
+|Zeigt die bestellte Menge der Auftragsposition an. +
+Diese Spalte ist eine Standardspalte.
+
+| *Artikel-ID*
+|Zeigt die Artikel-ID der Auftragsposition an. Durch Klick auf die ID wird der Artikel geöffnet. +
+Dies ist eine optionale Spalte.
+
+| *Variantennummer*
+|Zeigt die Variantennummer der Auftragsposition an. +
+Dies ist eine optionale Spalte.
+
+| *Variantenname*
+|Zeigt den Variantennamen der Auftragsposition an. +
+Dies ist eine optionale Spalte.
+
+| *Varianten-ID*
+|Zeigt die Varianten-ID der Auftragsposition an.  Durch Klick auf die ID wird die Variation geöffnet. +
+Diese Spalte ist eine Standardspalte.
+
+| *Artikelname*
+|Zeigt den Artikelnamen der Auftragsposition an. +
+Dies ist eine optionale Spalte.
+
+| *Attribute*
+|Zeigt die Attribute der Auftragsposition an. +
+Diese Spalte ist eine Standardspalte.
+
+| *Nettopreis*
+|Zeigt den Nettopreis der Auftragsposition an. +
+Diese Spalte ist eine Standardspalte.
+
+| *Regulärer Nettopreis*
+|Zeigt den regulären Nettopreis an.
+
+| *Bruttopreis*
+|Zeigt den Bruttopreis der Auftragsposition an. +
+Diese Spalte ist eine Standardspalte.
+
+| *Rabatt [%]*
+|Zeigt den für die Auftragsposition gewährten Rabatt an. +
+Diese Spalte ist eine Standardspalte.
+
+| *Aufpreis gesamt*
+|Zeigt die Summe der Aufpreise der Bestelleigenschaften der Auftragsposition an. +
+Diese Spalte ist eine Standardspalte.
+
+| *Gesamtbetrag (netto)*
+|Zeigt die Nettogesamtsumme der Auftragsposition an. +
+Diese Spalte ist eine Standardspalte.
+
+| *Gesamtbetrag (brutto)*
+|Zeigt die Bruttogesamtsumme der Auftragsposition an. +
+Diese Spalte ist eine Standardspalte.
+
+| *Lager*
+|Zeigt das *Lager* der Auftragsposition an. +
+Diese Spalte ist eine Standardspalte.
+
+| *USt. [%]*
+|Zeigt den Umsatzsteuersatz der Auftragsposition in Prozent an. +
+Diese Spalte ist eine Standardspalte.
+
+| *Externe Artikel-ID*
+|Zeigt die externe *Artikel-ID* an.
+
+| *Externe Auftragspositions-ID*
+|Zeigt die vom Marktplatz übermittelte *externe Auftragspositions-ID* an.
+
+| *Eigenschafts-ID*
+|Zeigt die ID der Eigenschaft an.
+
+| *Lagerorte*
+|Zeigt den Lagerort der Auftragsposition an.
+
+| *Gewinnspanne (netto)*
+|Zeigt die Netto-Gewinnspanne an.
+
+| *Nachbestellungs-ID*
+|Zeigt die ID der Nachbestellung an.
+
+|===
+
+[#edit-items]
+[discrete]
+
+==== Artikel bearbeiten
+
+Im Bereich Auftragspositionen hast du je nach Auftragstyp die Möglichkeit, die im Auftrag vorhandenen Artikel zu bearbeiten. Klicke dazu links auf den Bearbeitungsstift (material:edit[]). Die folgende Tabelle listet die verfügbaren Felder, die auch hier je nach Auftragstyp variieren können.
+
+[[table-edit-items]]
+.Artikel bearbeiten
+[cols="1,3"]
+|===
+|Einstellung |Erläuterung
+2+^| *Artikel*
+
+| *Artikel-ID*
+|Zeigt die Artikel-ID an.
+
+| *Varianten-ID*
+|Zeigt die Varianten-ID an. +
+Diese Spalte ist eine Standardspalte.
+
+| *Variantennummer*
+|Zeigt die Variantennummer an.
+
+| *Artikelname*
+|Zeigt den Artikelnamen an.
+
+| *Attribute*
+|Zeigt die Attribute an.
+
+| *Variantenname*
+|Zeigt den Variantennamen an.
+
+| *Barcode*
+|Zeigt den Barcode an.
+
+| *System-EK*
+|Zeigt den Einkaufspreis des Systems an.
+
+| *Preisauswahl*
+|Zeigt die Preisauswahl an.
+
+| *Kategorierabatt*
+|Der Kategorierabatt wird angezeigt.
+
+| *Kundenklassenrabatt*
+|Zeigt den Rabatt der Kundenklasse an.
+
+| *Verfügbarkeit*
+|Zeigt die Verfügbarkeit an.
+
+| *Netto-WB*
+|Zeigt den Netto-Warenbestand an.
+
+| *Lager*
+|Zeigt das Lager an.
+
+| *Menge*
+|Zeigt die Menge an.
+
+2+^| *Warenkorb*
+
+| *Menge*
+|Zeigt die Menge der Artikel an. Passe die Menge bei Bedarf an.
+
+| *Artikel-ID*
+|Zeigt die Artikel-ID an. +
+Mit Klick auf die ID wird der Artikel geöffnet.
+
+| *Varianten-ID*
+|Zeigt die Varianten-ID der Auftragsposition an. +
+Mit Klick auf die ID wird die Variante geöffnet.
+
+| *Artikel-ID* / *Varianten-ID*
+|Zeigt sowohl die Artikel-ID als auch die Varianten-ID an.
+
+| *Variantennummer*
+|Zeigt die Nummer der Variante an.
+
+| *Artikelname*
+|Zeigt den Namen des Artikels an.
+
+| *Attribute*
+|Zeigt die Attribute an.
+
+| *Variantenname*
+|Zeigt den Namen der Variante an.
+
+| *Barcode*
+|Zeigt den Barcode an.
+
+| *System-EK*
+|Zeigt den Einkaufspreis des Systems an.
+
+| *Preisauswahl*
+|Zeigt die Preisauswahl an. Wähle bei Bedarf eine andere Preisauswahl aus der Dropdown-Liste.
+
+| *Kategorierabatt*
+|Zeigt den Rabatt der Kategorie an.
+
+| *Kundenklassenrabatt*
+|Zeigt den Rabatt der Kundenklasse an.
+
+| *Nettopreis*
+|Zeigt den Nettopreis an. +
+Über material:edit[] kannst du das Datenfeld Nettopreis bearbeiten. Der Bruttopreis wird automatisch angepasst.
+
+| *Regulärer Nettopreis*
+|Zeigt den regulären Nettopreis an.
+
+| *Bruttopreis*
+|Zeigt den Bruttopreis an. +
+Über material:edit[] kannst du das Datenfeld Bruttopreis bearbeiten. Der Nettopreis wird automatisch angepasst.
+
+| *Aufpreis gesamt*
+|Zeigt den Gesamtbetrag des Aufpreises an.
+
+| *Rabatt*
+|Zeigt den Rabatt an.
+
+| *Gesamtbetrag (brutto)*
+|Zeigt den Brutto-Gesamtbetrag an.
+
+| *Lager*
+|Zeigt das Lager an. Wähle bei Bedarf ein anderes Lager aus der Dropdown-Liste.
+
+|*USt. (%)*
+|Die Umsatzsteuer wird in % angezeigt. +
+Voreingestellt sind 19.00 %. Über die Dropdown-Liste kannst du den Steuersatz ändern.
+
+2+^| *Auftragspositionen löschen*
+
+| *Löschen* (material:delete[])
+|Rechts über material:delete[] kannst du eine Auftragsposition löschen.
+
+2+^| *Kontextmenü* (material:more_vert[])
+
+| *Verkaufspreise aktualisieren* (material:refresh[])
+|Aktualisiert die Verkaufspreise.
+
+| *Variante entfernen* (material:link_off[])
+|Entfernt die zugeordnete Veriante von der Auftragsposition.
+
+| *Eigenschaften bearbeiten* (material:edit[])
+|Ermöglicht das Bearbeiten der Eigenschaft. Im Bearbeitungsmodus kannst du die Felder *Name*, *Wert* und *Aufpreis* anpssen.
+|===
+
+[#order-item-properties]
+[discrete]
+==== Auftragspositionseigenschaften anzeigen und bearbeiten
+
+Klicke in einer beliebigen Zeile im Bereich *Artikel bearbeiten* links auf das Pfeilsymbol (material:chevron_right[]), um die Auftragspositionseigenschaften anzuzeigen. Sind Eigenschaften für die Auftraspositionen hinterlegt, kannst du diese über das Kontextmenü (material:more_vert[]) bearbeiten (material:edit[]).
+
+[#area-payment-terms]
+=== Bereich: Zahlungsbedingungen
+
+Im Bereich *Zahlungsbedingungen* siehst du die Informationen *Zahlungsziel*, *Skonto (%)* und *Valuta (Tage)*.
+
+[IMPORTANT]
+.Zahlungsziel angeben
+====
+Möchtest du Valuta und Skonto nutzen, muss ein Zahlungsziel angegeben sein. Wenn für das Zahlungsziel nichts bzw. der Wert 0 eingetragen ist, sind die Zahlungsbedingungen nicht gültig und werden nicht auf Dokumente übernommen.
+====
+
+Wenn die Werte bereits in den xref:crm:kontakte-verwalten.adoc#300[Kundendaten] hinterlegt sind, werden sie vom System automatisch übernommen und hier eingetragen. Die Kundendaten haben somit Priorität. Ist in den Kundendaten nichts hinterlegt, wird als nächstes überprüft, ob die Zahlungsbedingungen in einer xref:crm:kontakte-verwalten.adoc#15[Kundenklasse] definiert sind. Falls ja, werden diese Daten übernommen und hier am Auftrag eingetragen. Sind die Werte weder in den Kundendaten noch in einer Kundenklasse hinterlegt, bleiben die Felder zu den Zahlungsbedingungen am Auftrag leer. +
+Am Auftrag lassen sich die Zahlungsbedingungen manuell eintragen und verändern. Dies ist unabhängig davon, woher Werte übertragen wurden oder ob keine Werte übernommen wurden. +
+Auf Dokumenten werden die Werte übernommen, die am dazugehörigen Auftrag hinterlegt sind. Beachte dazu auch die xref:auftraege:auftragsdokumente.adoc#intable-zahlungsbedingungen-anzeigen[Dokumenteneinstellungen]. Die Zahlungsbedingungen werden auf den Auftragsdokumenten xref:auftraege:rechnungen-erzeugen.adoc#[Rechnung], xref:auftraege:proformarechnung-erzeugen.adoc#[Proformarechnung], xref:auftraege:auftragsbestaetigung-erzeugen.adoc#[Auftragsbestätigung] und xref:auftraege:dokument-angebot-erzeugen.adoc#[Angebot] ausgegeben. +
+*_Hinweis:_* Die Zahlungsbedingungen werden nur auf diese Dokumente übernommen, wenn es sich um einen Auftrag mit der xref:payment:kauf-auf-rechnung.adoc#[Zahlungsart Rechnung] oder der xref:payment:vorkasse.adoc#[Zahlungsart Vorkasse] handelt.
+
+[[table-payment-terms]]
+.Einstellungen im Bereich Zahlungsbedingungen
+[cols="1,3"]
+|===
+|Einstellung |Erläuterung
+
+| *Zahlungsziel*
+|Zeigt das Zahlungsziel an.
+
+| *Skonto (%)*
+|Zeigt das Skonto in Prozent an.
+
+| *Valuta (Tage)*
+|Zeigt die Valuta (Wertstellung) in Tagen an.
+|===
+
+[#area-bank-data]
+=== Bereich: Bankdaten
+
+Im Bereich *Bankdaten* siehst du die Bankdaten auf einen Blick. Klicke auf *Neue Bankdaten* (material:add[]), um Daten einzugeben.
+
+[[table-bank-data]]
+.Einstellungen im Bereich Bankdaten
+[cols="1,3"]
+|===
+|Einstellung |Erläuterung
+
+| *IBAN*
+|Gib die *IBAN* ein. +
+Dieses Feld ist ein Pflichtfeld.
+
+| *BIC*
+|Gib die *BIC* ein. +
+Dieses Feld ist ein optionales Feld.
+
+| *Inhaber:in*
+|Gib die *Inhaber:in* ein. +
+Dieses Feld ist ein Pflichtfeld.
+
+| *Kontonummer*
+|Gib die *Kontonummer* ein. +
+Dieses Feld ist ein optionales Feld.
+
+| *Bankleitzahl*
+|Gib die *Bankleitzahl* ein. +
+Dieses Feld ist ein optionales Feld.
+
+| *Bank*
+|Gib den Namen der *Bank* ein. +
+Dieses Feld ist ein optionales Feld.
+
+| *Straße der Bank*
+|Gib die *Straße der *Bank* ein. +
+Dieses Feld ist ein optionales Feld.
+
+| *PLZ und Ort der Bank*
+|Gib die *PLZ und den Ort der Bank* ein. +
+Dieses Feld ist ein optionales Feld.
+
+| *Land der Bank*
+|Wähle das *Land der Bank* aus der Dropdown-Liste. +
+Dieses Feld ist ein optionales Feld.
+
+| *SEPA-Lastschriftmandat*
+|Aktiviere das *SEPA-Lastschriftmandat* über die Umschaltfläche icon:toggle_on[set=material, role=skyBlue]. Anschließend werden weitere Felder angezeigt. Nimm die Einstellungen entsprechend vor. Du kannst das Datum über den Kalender (material:today[]) ändern.
+
+| *Art des Mandats*
+|Wähle zwischen *SEPA-Firmen-Lastschrift* und *SEPA-Basis-Lastschrift*. +
+Dieses Feld ist nur sichtbar, wenn das SEPA-Lastschriftmandat aktiviert wurde.
+
+| *Ausführungsmodalität*
+|Wähle zwischen *Einmalige Zahlung* und *Wiederkehrende Zahlung*. +
+Dieses Feld ist nur sichtbar, wenn das SEPA-Lastschriftmandat aktiviert wurde.
+
+|===
+
+[#area-assigned-payments]
+=== Bereich: Zugeordnete Zahlungen
+
+Im Bereich *Zugeordnete Zahlungen* siehst du alle Informationen zu den Zahlungen, die dem Auftrag zugeordnet sind. Du kannst sowohl die Spalten konfigurieren (material:settings[]) als auch neue Zahlungen erstellen (material:add[]).
+
+[[table-assigned-payments]]
+.Einstellungen im Bereich Zugeordnete Zahlungen
+[cols="1,3"]
+|===
+|Einstellung |Erläuterung
+
+| *Gesamtbetrag Auftrag*
+|Zeigt den Gesamtbetrag des Auftrags an.
+
+| *Bezahlt*
+|Zeigt den bezahlten Betrag an.
+
+| *Offen*
+|Zeigt den offenen Betrag an.
+|===
+
+[[table-assigned-payments-availabe-columns]]
+.Verfügbare Spalten für zugeordnete Zahlungen
+[cols="1,3"]
+|===
+|Einstellung |Erläuterung
+
+| *Zahlungs-ID*
+|Zeigt die ID der Zahlung an.
+
+| *Eltern-ID*
+|Zeigt die übergeordnete ID an.
+
+| *Auftrags-ID*
+|Zeigt die ID des Auftrags an.
+
+| *Kunden-ID*
+|Zeigt die ID der Kund:in an.
+
+| *Zahlungsart*
+|Zeigt die Zahlungsart an.
+
+| *Soll/Haben*
+|Zeigt das Soll/Haben an.
+
+| *Betrag*
+|Zeigt den Betrag an.
+
+| *Status*
+|Zeigt den Status an.
+
+| *Verwendungszweck*
+|Zeigt den Verwendungszweck an.
+
+| *Absender der Zahlung*
+|Zeigt den Absender der Zahlung an.
+
+| *Eingangsdatum*
+|Zeigt das Eingangsdatum der Zahlung an.
+
+//Ist es das Datum des Imports?
+| *Importiert*
+|Zeigt das Datum des Imports an.
+
+|===
+
+//Einstellungen für Zahlung buchen hier hinzufügen
+
+[#area-order-referrer]
+=== Bereich: Auftragsreferenzen
+
+Im Bereich *Auftragsreferenzen* siehst du die mit dem Auftrag verbundenen Informationen. Über *Spalten konfigurieren* (material:settings[]) kannst du die Spalten beliebig anpassen.
+
+[[table-order-referrer]]
+.Einstellungen im Bereich Auftragsreferenzen
+[cols="1,3"]
+|===
+|Einstellung |Erläuterung
+
+| *Beziehung*
+|Zeigt die Beziehung zum Auftragstyp an.
+
+| *ID*
+|Zeigt die ID des Auftrags an.
+
+| *Typ*
+|Zeigt den Auftragstyp an.
+
+//oder die Nummer des Dokuments?
+| *Dokument*
+|Zeigt das Dokument an.
+
+| *Status*
+|Zeigt den Status der Bearbeitung an.
+
+| *Erstellt*
+|Zeigt das Erstellungsdatum an.
+
+| *Betrag*
+|Zeigt den Betrag an.
+
+| *Zahlungsart*
+|Zeigt die gewählte Zahlungsart an.
+
+| *Rechnungsadresse*
+|Zeigt die Rechnungsadresse an. Die im Datensatz des Kontakts hinterlegte Rechnungsadresse wird übernommen. Sind mehrere Rechnungsadressen hinterlegt, wird die als primär definierte Rechnungsadresse übernommen.
+
+| *Lieferadresse*
+|Zeigt die Lieferadresse an. Wenn du die Option *Wie Rechnung* gewählt hast, wird die unter *Rechnungsadresse* eingegebene Adresse auch als Lieferadresse übernommen. Ansonsten wird die im Datensatz des Kontakts hinterlegte Lieferadresse übernommen.
+|===
+
+[#area-order-properties]
+=== Bereich Eigenschaften
+
+Im Bereich *Eigenschaften* siehst du Eigenschaften der Auftragspositionen. Über *Spalten konfigurieren* (material:settings[]) kannst du die Spalten beliebig konfigurieren.
+
+[[table-order-properties]]
+.Einstellungen im Bereich Eigenschaften
+[cols="1,3"]
+|===
+|Einstellung |Erläuterung
+
+| *Typ-ID*
+|Zeigt die ID des Typs an.
+
+| *Name*
+|Zeigt den Namen der Auftragseigenschaft an.
+
+| *Wert*
+|Zeigt den Wert der Auftragseigenschaft an.
+
+| *Erstellungsdatum*
+|Zeigt das Erstellungsdatum sowie die Uhrzeit an.
+
+| *Letzte Änderung*
+|Zeigt das Datum der letzten Änderung sowie die Uhrzeit an.
+|===
+
+[#area-documents]
+=== Bereich: Dokumente
+
+Im Bereich *Dokumente* siehst du alle vorhandenen sowie archivierten Dokumente deiner Aufträge. Du kannst die Spalten konfigurieren (material:settings[]), neue Dokumente erstellen (material:note_add[]) und externe Dokumente hochladen (material:file_upload[]).
+
+[[table-documents]]
+.Einstellungen im Bereich Dokumente
+[cols="1,3"]
+|===
+|Einstellung |Erläuterung
+
+| *Alle Dokumente*
+|Zeigt alle vorhandenen Dokumente an. Je nach Auftragstyp sind verschiedene Dokumente verfügbar.
+
+| *Archivierte Dokumente*
+|Zeigt alle archivierten Dokumente an. Je nach Auftragstyp sind verschiedene Dokumente verfügbar.
+
+| *Name*
+|Zeigt den Namen des Dokuments an.
+
+| *Nummer*
+|Zeigt die Nummer des Dokuments an.
+
+| *Typ*
+|Zeigt den Typ des Dokuments an.
+
+| *Referenz*
+|Zeigt die Referenz an.
+
+| *Lager*
+|Zeigt das Lager an.
+
+| *Eigner*
+|Zeigt den Eigner an.
+
+| *Letzte Änderung*
+|Zeigt das Datum der letzten Änderung an.
+
+//ggf. anpassen - nochmal prüfen
+| *Datum anzeigen*
+|Zeigt das Datum an.
+
+| *Kontextmenü* (material:more_vert)
+|Klicke auf die weiteren Optionen (material:more_vert[]), um ein Dokument herunterzuladen (material:file_download[]).
+|===
+
+[#area-history]
+=== Bereich: Historie
+
+Im Bereich *Historie* siehst du eine Übersicht der getätigten Aktionen mit dem jeweiligen Status und dem Datum. Du kannst die Spalten beliebig konfigurieren (material:settings[]).
+
+[[table-history]]
+.Einstellungen im Bereich Historie
+[cols="1,3"]
+|===
+|Einstellung |Erläuterung
+
+| *Datum*
+|Zeigt das Datum und die Uhrzeit an.
+
+| *Benutzer*
+|Zeigt die Benutzer:in an.
+
+| *Aktion*
+|Zeigt die durchgeführte Aktion an.
+
+| *Status*
+|Zeigt den aktuellen Status an.
+
+|===
+
+[#area-notes]
+=== Bereich: Notizen
+
+Im Bereich *Notizen* kannst du interne Auftragsnotizen sowie Notizen von Kund:innen mit dem Erstelldatum und dem Zeitstempel einsehen. Die aktuellste Notiz wird jeweils oben angezeigt. Füge außerdem weitere Notizen hinzu (material:add[]) und bearbeite oder lösche interne Notizen über das Kontextmenü (material:vert_more[]). Notizen, die von Kund:innen stammen, können allerdings nicht bearbeitet, sondern nur gelöscht werden. Handelt es sich um Wünsche von Kund:innen, werden diese automatisch mit einem Tag versehen.
 
 //evtl. zu kapitel zur toolbar hinzufügen?
 [#redeem-coupon]
