--- a/docs/de-de/modules/auftraege/pages/design-order-view.adoc
+++ b/docs/de-de/modules/auftraege/pages/design-order-view.adoc
@@ -6,15 +6,12 @@
 Auf dieser Handbuchseite erfährst du, wie du die Auftragsübersicht nach deinen Bedürfnissen gestaltest. Mit Hilfe der MyView kannst du beispielsweise entscheiden, welche Splaten für deine Aufträge sichtbar sind und wie diese angeordnet sind.
 Die Detailansicht eines Auftrags ändert sich je nach Auftragstyp. Für jeden Typ gibt es somit eine individuelle Übersicht mit den jeweils relevanten Informationen.
 
-//siehe kapitel auftragsübersicht einrichten auf seite aufträge verwalten - inhalte hierhin überführen und anpassen
-
 [#design-toolbar]
-== Toolbar in Detailansicht eines Auftrags
-//(Titel anpassen in "Toolbar gestalten"? - ab wann möglich?)
-//siehe seite artikel - detailansicht: verzeichnis der datenfelder
-//add screenshot of toolbar as soon as it is final
+== Toolbar in Auftrags-Detailansicht nutzen
+//add screenshot of toolbar
 
 Öffnest du einen Auftrag, stehen dir je nach Auftragstyp verschiedene Funktionen in der Toolbar zur Verfügung.
+//Kann die Toolbar auch selbst gestaltet werden? Ab wann möglich?
 //Entscheide hier selbst, welche Funktionen du direkt angezeigt bekommen möchtest und welche Funktionen im Kontextmenü (material:more_vert[]) verfügbar sein sollen. Klicke dazu auf *Spalten konfigurieren* und nimm die Einstellungen vor, um für dich wichtige Funktionen einzublenden und weniger relevante Funktionen über das Kontextmenü erreichbar zu machen.
 
 [[table-toolbar-functions]]
@@ -111,6 +108,12 @@ Diese Funktion ist im Kontextmenü (material:more_vert[]) der Toolbar verfügbar
 //wann kann ein Auftrag nicht gelöscht werden?
 |===
 
+[TIP]
+.Seitennavigation ein- und ausblenden
+====
+Sowohl in der Auftragsübersicht als auch in der Detailansicht eines Auftrags hast du die Möglichkeit, die Seitennavigation ein- und auszuklappen. Klicke dazu oben links auf material:menu[].
+====
+
 [#configure-columns]
 == Spalten in der Übersicht konfigurieren
 
@@ -140,6 +143,7 @@ Spalten konfigurieren:
 Du kannst die Reihenfolge der Tabellenspalten per Drag-and-drop mit einem Klick auf material:drag_indicator[] beliebig verändern. Ziehe die Einträge an die gewünschte Stelle und speichere deine Änderungen anschließend.
 ====
 
+[#table-columns-orders]
 === Tabellenspalten für Aufträge konfigurieren
 
 Folgende Spalten stehen für die *Auftragsübersicht* zur Verfügung:
@@ -321,7 +325,7 @@ Diese Spalte ist eine optionale Spalte.
 |Zeigt die weiteren Aktionen (icon) an, die für den jeweiligen Auftrag zur Verfügung stehen.
 |====
 
-
+[#table-columns-order-items]
 === Tabellenspalten für Auftragspositionen konfigurieren
 
 Wenn du die zweite Ebene aufklappst (material:chevron_right[]), werden dir Informationen zu den *Auftragspositionen* angezeigt. Dafür stehen die in der folgenden Tabelle aufgelisteten Spalten zur Verfügung. Beachte, dass Auftragspositionen nicht bearbeitet werden können. +
@@ -433,17 +437,126 @@ Diese Spalte ist eine Standardspalte. +
 |Die ID der Nachbestellung wird angezeigt. Klicke auf die ID, um die Nachbestellung zu öffnen.
 |====
 
+
+[#editing-mode]
+== Bearbeitungsmodus verwenden
+
+Der Bearbeitungsmodus bietet dir viel Flexibilität beim Anordnen von Inhalten und Daten im Menü *Aufträge » Aufträge (Tesphase)*. Grundsätzlich platzierst du Elemente intuitiv per Drag-and-drop. Du kannst jedes Element individuell anpassen und weiter bearbeiten. <<#table-functions-editing-mode>> enthält einen Überblick über die Funktionen, die im Bearbeitungsmodus zur Verfügung stehen.
+
+[TIP]
+.Hast du Admin-Rechte?
+======
+Nur xref:business-entscheidungen:benutzerkonten-zugaenge.adoc#[Admin-Nutzer] können Ansichten erstellen und bearbeiten.
+Falls du kein Admin bist:
+
+. Wende dich an eine Person mit Admin-Rechten.
+. Bitte die Person, die erforderlichen Ansichten zu erstellen und sie für dein Benutzerkonto freizugeben.
+======
+
+[[table-functions-editing-mode]]
+.Verfügbare Funktionen im Bearbeitungsmodus
+[cols="2,1,6"]
+|===
+
+|Bedienelement |Symbol |Erläuterung
+
+| *Ansicht bearbeiten*
+|icon:design_inline_edit[set=plenty]
+| Öffnet die Ansicht zur Bearbeitung. +
+Du kannst die Elemente per Drag-and-drop an einer anderen Stelle positionieren und die Größe der Elemente anpassen.
+
+| *Rückgängig*
+|icon:undo[set=material]
+| Macht die letzte Änderung rückgängig, solange die betreffende Änderung noch nicht gespeichert wurde.
+
+| *Wiederherstellen*
+|icon:redo[set=material]
+| Stellt eine rückgängig gemachte Änderung wieder her.
+
+| *Standardansicht*
+|
+| Dieser Bereich zeigt an, welche Ansicht aktuell geöffnet ist. Klicke auf icon:sort-down[role=darkGrey], um zu einer anderen Ansicht zu wechseln oder eine neue Ansicht zu erstellen.
+
+| *Letzten Speicherpunkt wiederherstellen*
+|icon:restore[set=material]
+| Setzt die Ansicht auf den Stand zurück, der beim letzten Speichern vorhanden war.
+
+| *Speichern*
+|icon:save[set=material]
+| Speichert die Änderungen. Auf diese Weise kannst du beliebig viele Ansichten nach deinen Wünschen speichern. +
+Wenn du das nächste Mal {edit-object} bearbeiten möchtest, kannst du die von dir bevorzugte Ansicht über die Dropdown-Liste oben rechts öffnen. Ebenfalls über diese Dropdown-Liste erstellst du mit einem Klick auf icon:add[set=material] *Neue Ansicht erstellen…* eine neue Ansicht.
+
+| *Bearbeiten*
+|icon:edit[set=material]
+|Wenn du das Element bearbeitest, siehst du auf der rechten Seite im Bereich *Elemente*, welche Elemente in diesem Bereich noch nicht verwendet wurden und dir somit noch zur Verfügung stehen. Bereits verwendete Elemente sind ausgegraut und können nicht ein weiteres Mal verwendet werden.
+
+| *Löschen*
+|icon:delete[set=material]
+|Löscht das Element.
+
+| *Schließen*
+|icon:close[set=material]
+| Beendet den Bearbeitungsmodus. Wenn du die Änderungen nicht gespeichert hast, wird eine Sicherheitsabfrage angezeigt.
+
+|===
+
+[#create-new-view]
+=== Neue Ansicht erstellen
+Um eine neue Ansicht zu erstellen, gehe vor wie im Folgenden beschrieben.
+
+[.instruction]
+Neue Ansicht erstellen:
+
+. Klicke auf die Liste der Ansichten (icon:caret-down[role="darkGrey"]).
+. Klicke auf icon:add[set=material] *Neue Ansicht erstellen ...*.
+. Gib einen Namen ein.
+. Klicke auf *Ansicht erstellen*. +
+→ Die neue Ansicht wird erstellt und automatisch geöffnet, d.h. sie wird angewendet.
+Es ist jetzt möglich, zwischen den Ansichten zu wechseln.
+
+[#place-elements]
+=== Elemente anordnen
+
+Platziere die Elemente intuitiv per Drag-and-drop genau an der Stelle, an der du sie haben möchtest. Passe außerdem die Größe der Elemente an deine Bedürfnisse an. +
+Um Elemente hinzuzufügen, gehe vor wie im Folgenden beschrieben.
+
+[.instruction]
+Elemente anordnen:
+
+. Öffne das Menü *Aufträge » Aufträge (Testphase)*.
+. Öffne die Auftragsansicht, in der du ein Element platzieren möchtest.
+. Klicke auf icon:design_inline_edit[set=plenty] *Ansicht bearbeiten*.
+. Wähle rechts ein Element und platziere es per Drag-and-drop an der gewünschten Stelle. +
+*_Optional:_* Bewege deinen Mauszeiger an den Rand eines Elementes und ziehe das Element mit gedrückter Maustaste in die beliebige Größe. +
+*_Tipp:_* Möchtest du deine Elemente später an eine andere Stelle verschieben? Dann kannst du dies jederzeit per Drag-and-drop tun, bis alle Elemente ideal platziert sind.
+
+[#complete-editing]
+=== Bearbeitung abschließen
+
+Hast du alle Einstellungen vorgenommen, kannst du deine Änderungen speichern und den Bearbeitungsmodus abschließen. Prüfe im Anschluss, ob die Ansicht nun deinen Vorstellungen entspricht.
+
+[.instruction]
+Bearbeitung abschließen:
+
+. Speichere die Ansicht (terra:save[role="darkGrey"]) und schließe den Bearbeitungsmodus (icon:close[role="darkGrey"]).
+. Prüfe das Ergebnis im Hauptfenster.
+. Falls erforderlich:
+.. Klicke noch einmal auf *Ansicht bearbeiten* (terra:design_inline_edit[role="darkGrey"]) und passe die Ansicht weiter an.
+.. Erlaube anderen Benutzer:innen, die Ansicht zu sehen.
+
 //evtl. in Konfig umschreiben
 [#show-order-items]
-=== Auftragspositionen ein- und ausblenden
+== Auftragspositionen ein- und ausblenden
 
 In der Auftragsübersicht werden die Auftragspositionen standardmäßig nicht angezeigt. Möchtest du aber Eigenschaften zu Auftragspositionen, wie *Name* oder *Wert* sehen, klicke in der Zeile des Auftrags links auf das Pfeilsymbol (material:chevron_right[]). Zunächst werden dir die Informationen zum Auftrag, wie *Menge*, *Artikel-ID* oder *Variantennummer* angezeigt. Klicke auf dieser Ebene ein weiteres Mal links auf das Pfeilsymbol (material:chevron_right[]), um die Eigenschaften zu sehen.
 
 *_Hinweis:_* Möchtest du die Eigenschaften der Auftragspositionen bearbeiten, öffne den gewünschten Auftrag und klicke im Bereich *Auftragspositionen* auf *Bearbeiten* (material:edit[]).
 
 
-// weitere Themen zur MyView hier einfügen?
-[#editing-mode]
-Wie funktioniert der Bearbeitungsmodus? Raster erstellen etc. - evtl. von Artikelseite übernehmen
+[#asterisk-unsaved-changes]
+== Ungespeicherte Änderungen erkennen
+
+//add screenshot
+Hast du Änderungen an einem Auftrag vorgenommen, erscheint ein Sternchen links in der Seitennavigation. Dieses Sternchen zeigt an, auf welcher Ebene ungespeicherte Änderungen vorhanden sind. Sobald du die Änderungen speicherst (material:save[]) oder die Änderungen auf den vorherigen Stand zurücksetzt, verschwindet das Sternchen wieder.
 
 // Link zur nächsten Seite hier einfügen
