--- a/docs/de-de/modules/auftraege/pages/working-with-orders.adoc
+++ b/docs/de-de/modules/auftraege/pages/working-with-orders.adoc
@@ -21,6 +21,7 @@ Passe die xref:auftraege:grundeinstellungen.adoc#[Grundeinstellungen] im Menü *
 
 Nutze die Gruppenfunktionen, um für mehrere Aufträge gleichzeitig eine Aktion auszuführen. Für Aufträge stehen dir die folgenden Gruppenfunktionen zur Verfügung.
 
+//icons hinzufügen
 [[table-order-group-functions]]
 .Gruppenfunktionen für Aufträge
 [cols="1,3"]
@@ -94,7 +95,7 @@ Rechts in der Auftragsübersicht sind je nach Auftragstyp weitere Funktionen üb
 [#order-areas]
 == Erläuterungen zu den einzelnen Bereichen
 
-Alle in einem Auftrag verfügbaren Bereiche und deren Funktionen werden in den folgenden Unterkapiteln erläutert. Verwende den xref:design-order-view:editing-mode.adoc[Bearbeitungsmodus] und entscheide selbst, welche Felder dir in welchem Bereich angezeigt werden sollen. So kannst du deine Ansicht individuell gestalten und auf deine Bedürfnisse anpassen. Beachte, dass die verfügbaren Felder je nach Auftragstyp variieren können. +
+Alle in einem Auftrag verfügbaren Bereiche und deren Funktionen werden in den folgenden Unterkapiteln erläutert. Verwende den xref:design-order-view:editing-mode.adoc[Bearbeitungsmodus] und entscheide selbst, welche Felder dir in welchem Bereich angezeigt werden und in welcher Reihenfolge sie angeordnet sind. So kannst du deine Ansicht individuell gestalten und auf deine Bedürfnisse anpassen. Beachte, dass die verfügbaren Felder je nach Auftragstyp variieren können. Sobald du einen Auftrag geöffnet hast, werden alle Bereiche links in der Seitennavigation angezeigt. +
 Mit einem Klick auf einen Eintrag in der folgenden Liste gelangst du direkt in das jeweilige Unterkapitel, in dem du weitere Informationen findest.
 
 * <<#overview, Übersicht>>
