ADD selection default sl

--- a/docs/de-de/modules/automatisierung/pages/aktionen.adoc
+++ b/docs/de-de/modules/automatisierung/pages/aktionen.adoc
@@ -1801,7 +1801,7 @@ Die Einstellungen, die du beim Erstellen der Aktion wählst, werden beim Erstell
 |Lager wählen, um Varianten standardmäßig in dieses Lager einzubuchen, wenn nicht der Lagerort aus dem Auftrag verwendet wird.
 
 | **Lagerort**
-|Lagerort wählen, um Varianten standardmäßig an diesem Lagerort einzubuchen, wenn nicht der Lagerort aus dem Auftrag verwendet wird.
+|Lagerort wählen, um Varianten standardmäßig an diesem Lagerort einzubuchen, wenn nicht der Lagerort aus dem Auftrag verwendet wird. Für Lager, die keine Lagerorte haben, kannst du die Option *Standard-Lagerort* wählen.
 
 | **Lagerort gewählte Position**
 |Wählen, in welches Lager einzelne Positionen eines Auftrags zurückgebucht werden sollen. +
